--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
+    "@tanstack/react-router": "^1.161.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/router-plugin": "^1.161.1",
     "@types/bun": "1.3.9",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
