--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,26 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "react", "react-dom", "vite/client"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/mainview/*"],
-      "electrobun/bun": ["./src/types/electrobun-bun"]
+      "@/*": ["./src/mainview/*"]
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "build", "../../package/dist"]
+  "exclude": [
+    "node_modules",
+    "node_modules/electrobun/dist/**/*",
+    "dist",
+    "build"
+  ]
 }
