--- a/package.json
+++ b/package.json
@@ -2,22 +2,46 @@
   "name": "mynth-app",
   "productName": "mynth-app",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Local-first AI chat desktop app",
   "main": ".vite/build/main.js",
   "private": true,
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:check": "drizzle-kit check --config=drizzle.config.ts",
+    "db:studio": "drizzle-kit studio --config=drizzle.config.ts",
+    "format": "oxfmt --ignore-path .oxfmtignore --write .",
+    "format:check": "oxfmt --ignore-path .oxfmtignore --check .",
+    "lint": "oxlint .",
+    "lint:fix": "oxlint --fix .",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": {
-    "name": "Tomasz Szczuciński",
+    "name": "Tomasz Szczucinski",
     "email": "tomasz.szczucinski@mynth.io"
   },
   "license": "MIT",
+  "dependencies": {
+    "@base-ui/react": "^1.2.0",
+    "@tanstack/react-router": "^1.161.1",
+    "better-sqlite3": "^12.6.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
+    "electron-squirrel-startup": "^1.0.1",
+    "lucide-react": "^0.575.0",
+    "react": "^19.2.4",
+    "react-day-picker": "^9.13.2",
+    "react-dom": "^19.2.4",
+    "smol-toml": "^1.6.0",
+    "tailwind-merge": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
+  },
   "devDependencies": {
     "@electron-forge/cli": "^7.11.1",
     "@electron-forge/maker-deb": "^7.11.1",
@@ -27,17 +51,20 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
     "@electron-forge/plugin-fuses": "^7.11.1",
     "@electron-forge/plugin-vite": "^7.11.1",
-    "@electron/fuses": "^1.8.0",
+    "@electron/fuses": "^2.0.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/router-plugin": "^1.161.1",
     "@types/electron-squirrel-startup": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@types/node": "^25.3.0",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "drizzle-kit": "^0.31.9",
     "electron": "40.6.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-import": "^2.32.0",
-    "typescript": "~4.5.4",
-    "vite": "^5.4.21"
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "oxfmt": "^0.34.0",
+    "oxlint": "^1.48.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
