--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "^19.2.4",
     "smol-toml": "^1.6.0",
     "tailwind-merge": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.11.1",
