--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -10,5 +10,5 @@
     "jsx-uses-react": "off",
     "import/no-unassigned-import": "off"
   },
-  "ignorePatterns": ["node_modules/**", "dist/**", "build/**"]
+  "ignorePatterns": ["node_modules/**", "dist/**", "build/**", "src/renderer/components/ui/**"]
 }
