--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,11 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["forge.config.ts", "src/**/*.ts", "src/**/*.tsx", "vite.*.config.ts", "forge.env.d.ts"]
+  "include": [
+    "forge.config.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "vite.*.config.ts",
+    "forge.env.d.ts"
+  ]
 }
