--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/react": "^1.1.5",
     "@tanstack/react-router": "^1.161.1",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
