feat(workspaces): add settings flows for create and rename
Add workspace creation in settings, workspace-specific settings routes, and shared name validation. Expose create/update IPC handlers and workspace store actions for create, activate, and rename flows.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@base-ui/react": "^1.2.0",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
+    "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-router": "^1.161.1",
+    "arktype": "^2.1.29",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
