--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "smol-toml": "^1.6.0",
     "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
