--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
+    "@headless-tree/core": "^1.6.3",
+    "@headless-tree/react": "^1.6.3",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
     "@tanstack/react-form": "^1.28.3",
+    "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.161.1",
     "arktype": "^2.1.29",
     "better-sqlite3": "^12.6.2",
