--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.161.1",
+    "@tanstack/react-virtual": "^3.13.19",
     "arktype": "^2.1.29",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
