--- a/package.json
+++ b/package.json
@@ -26,21 +26,27 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.34",
+    "@ai-sdk/react": "^3.0.103",
     "@base-ui/react": "^1.2.0",
     "@headless-tree/core": "^1.6.3",
     "@headless-tree/react": "^1.6.3",
+    "@hono/node-server": "^1.19.9",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
+    "@openrouter/ai-sdk-provider": "^2.2.3",
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.161.1",
     "@tanstack/react-virtual": "^3.13.19",
+    "ai": "^6.0.101",
     "arktype": "^2.1.29",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
     "electron-squirrel-startup": "^1.0.1",
+    "hono": "^4.12.2",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-day-picker": "^9.13.2",
