--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.4",
     "smol-toml": "^1.6.0",
+    "streamdown": "^2.3.0",
     "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
