--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-hotkeys": "^0.3.0",
+    "@tanstack/react-pacer": "^0.20.0",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.161.1",
     "@tanstack/react-virtual": "^3.13.19",
@@ -49,6 +50,7 @@
     "drizzle-orm": "^0.45.1",
     "electron-squirrel-startup": "^1.0.1",
     "hono": "^4.12.2",
+    "immer": "^11.1.4",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-day-picker": "^9.13.2",
