--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
     "@openrouter/ai-sdk-provider": "^2.2.3",
+    "@streamdown/code": "^1.0.3",
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-hotkeys": "^0.3.0",
     "@tanstack/react-pacer": "^0.20.0",
